# plugin-manager-template

./: Cargo.toml  README.md  cargo-generate.toml  main.py  plugin_manager.rhai  plugin_manager_post.sh  plugin_manager_pre.sh
.github/workflows/: build_template.yml  ci_plugin_manager.yml
plugin_manager/: Cargo.toml
plugin_manager/src/: lib.rs
scripts/workspace_manager/: Cargo.toml
scripts/workspace_manager/src/: main.rs
tests/plugin_inventory/: Cargo.toml
tests/plugin_inventory/src/: inventory_a.rs  lib.rs
tests/plugin_mods/: Cargo-macos.toml  Cargo-windows.toml  Cargo.toml
tests/plugin_mods/src/: lib.rs  plugin_a.rs  plugin_b.rs
tests/plugin_tasks/: Cargo.toml
tests/plugin_tasks/src/: lib.rs  task_a.rs
{{ crate_name }}_plugin_manager/: Cargo.toml  README.md
{{ crate_name }}_plugin_manager/src/: lib.rs  plugin_structs.rs  plugin_types.rs
{{ project-name }}_plugin_manager/src/: plugin_structs.rs
