[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2024"
authors = ["Andre Bowen-Brown <contact@genja.co.uk>"]
description = "A flexible and easy-to-use plugin management system for Rust applications"
license = "Apache-2.0"
readme = "README.md"
keywords = ["plugin", "manager", "dynamic", "loading"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
libloading = "0.8.8"
log = "0.4.28"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.6"

[lib]
name = "plugin_manager"


